--- a/ea-template/src/main/resources/database-${online}.properties
+++ b/ea-template/src/main/resources/database-${online}.properties
@@ -1,6 +1,6 @@
 
-ea.jdbc.url=jdbc:h2:~/template
-#ea.jdbc.url=jdbc:h2:tcp://localhost/~/template
+#ea.jdbc.url=jdbc:h2:~/template
+ea.jdbc.url=jdbc:h2:tcp://localhost/~/common
 ea.jdbc.driver=org.h2.Driver
 ea.hibernate.dialect=org.hibernate.dialect.H2Dialect
 ea.jdbc.username=sa
@@ -8,8 +8,13 @@ ea.jdbc.password=
 ea.jdbc.maxIdle=10
 ea.jdbc.maxActive=30
 ea.jdbc.maxWait=60000
-ea.hibernate.hbm2ddl=create
-ea.hibernate.show_sql=false
+ea.hibernate.hbm2ddl=update
+ea.hibernate.show_sql=true
+ea.hibernate.jdbc.fetch_size=50
+ea.hibernate.cache.provider_class=org.hibernate.cache.EhCacheProvider
+ea.hibernate.cache.use_query_cache=true
+ea.hibernate.cache.use_second_level_cache=true
+
 #ea.hibernate.connection.autocommit=true
 
 
