--- a/ea-template/src/main/resources/database-${online}.properties
+++ b/ea-template/src/main/resources/database-${online}.properties
@@ -1,6 +1,6 @@
 
-#ea.jdbc.url=jdbc:h2:~/template
-ea.jdbc.url=jdbc:h2:tcp://localhost/~/common
+ea.jdbc.url=jdbc:h2:~/template
+#ea.jdbc.url=jdbc:h2:tcp://localhost/~/common
 ea.jdbc.driver=org.h2.Driver
 ea.hibernate.dialect=org.hibernate.dialect.H2Dialect
 ea.jdbc.username=sa
