--- a/ea-activiti/.project
+++ b/ea-activiti/.project
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
   <name>ea-activiti</name>
   <comment>所有子项目公共配置信息. NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
   <projects>
-    <project>ea-activiti</project>
+    <project>ea-common</project>
   </projects>
   <buildSpec>
     <buildCommand>
