--- a/ea-parent/pom.xml
+++ b/ea-parent/pom.xml
@@ -34,7 +34,7 @@
 		<json.version>2.2.1</json.version>
 		<junit.version>4.9</junit.version>
 		<h2.version>1.3.167</h2.version>
-		<jetty.version>8.0.0.M0</jetty.version><!--  -->
+		<jetty.version>8.1.9.v20130131</jetty.version><!--8.0.0.M0  -->
 		<servlet-api.version>3.0.20100224</servlet-api.version>
 		<commons-logging.version>1.1.1</commons-logging.version>
 		<commons-fileupload.version>1.2.1</commons-fileupload.version>
