--- a/ea-template/src/main/resources/database-${online}.properties
+++ b/ea-template/src/main/resources/database-${online}.properties
@@ -1,10 +1,12 @@
-
 #ea.jdbc.url=jdbc:h2:~/test
-ea.jdbc.url=jdbc:h2:tcp://localhost/~/common
-ea.jdbc.driver=org.h2.Driver
-ea.hibernate.dialect=org.hibernate.dialect.H2Dialect
-ea.jdbc.username=sa
-ea.jdbc.password=
+ea.jdbc.url=jdbc:mysql://192.168.1.104:3306/apmtest
+#jdbc:h2:tcp://localhost/~/common
+ea.jdbc.driver=com.mysql.jdbc.Driver
+#org.h2.Driver
+ea.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#org.hibernate.dialect.H2Dialect
+ea.jdbc.username=root
+ea.jdbc.password=123456
 ea.jdbc.maxIdle=10
 ea.jdbc.maxActive=30
 ea.jdbc.maxWait=60000
