untrack db file

--- a/ea-template/src/main/resources/database-${online}.properties
+++ b/ea-template/src/main/resources/database-${online}.properties
@@ -1,6 +1,6 @@
 
 #ea.jdbc.url=jdbc:h2:~/test
-ea.jdbc.url=jdbc:mysql://192.168.1.104:3306/apmtest
+ea.jdbc.url=jdbc:mysql://localhost:3306/apmtest
 #jdbc:h2:tcp://localhost/~/common
 ea.jdbc.driver=com.mysql.jdbc.Driver
 #org.h2.Driver
