--- a/ea-template/src/main/resources/database-h2.properties
+++ b/ea-template/src/main/resources/database-h2.properties
@@ -7,7 +7,7 @@ ea.jdbc.password=
 ea.jdbc.maxIdle=10
 ea.jdbc.maxActive=30
 ea.jdbc.maxWait=60000
-ea.hibernate.hbm2ddl=update
+ea.hibernate.hbm2ddl=create
 ea.hibernate.show_sql=false
 #ea.hibernate.connection.autocommit=true
 ea.hibernate.jdbc.fetch_size=50
