--- a/ea-parent/pom.xml
+++ b/ea-parent/pom.xml
@@ -1,13 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<!--
-	<parent>
-		<groupId>org.apache.struts</groupId>
-		<artifactId>struts2-apps</artifactId>
-		<version>2.3.7</version>
-	</parent>
-	-->
 	<groupId>ea</groupId>
 	<artifactId>ea-parent</artifactId>
 	<name>ea-parent</name>
@@ -15,48 +8,41 @@
 	<packaging>pom</packaging>
 	<version>1.0-SNAPSHOT</version>
 	<properties>
-		<maven.compile.deprecation>off</maven.compile.deprecation>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<sitepath>D:/train/soft/s-Apache2.2/htdocs/${project.name}</sitepath>
-		<jdk.version>1.6</jdk.version>
-
-		<slf4j.version>1.7.2</slf4j.version>
-		<logback.version>1.0.9</logback.version>
-    <janino.version>2.6.1</janino.version>
-    <scala.version>2.9.2</scala.version>
-    <groovy.version>2.0.0</groovy.version>
- 		<jansi.version>1.8</jansi.version>
-	  <cometd.version>2.7.0</cometd.version>
-	  
-	  <mysql.version>5.1.29</mysql.version>
-	
-		<hibernate3.version>3.6.1.Final</hibernate3.version>
-		<!--<spring>3.0.5.RELEASE</spring>-->
-		<spring>3.2.1.RELEASE</spring>
-		<struts2.version>2.3.16</struts2.version><!--2.3.7-->
-		<json.version>2.2.1</json.version>
-		<junit.version>4.9</junit.version>
-		<h2.version>1.3.167</h2.version>
-		<jetty.version>9.1.2.v20140210</jetty.version><!--    8.0.0.M0  8.1.9.v20130131 --><!--7.6.13.v20130916 8.0.0.M0  8.1.9.v20130131 -->
-		
-		<servlet-api.version>3.1.0</servlet-api.version>
-		<commons-logging.version>1.1.1</commons-logging.version>
-		<commons-fileupload.version>1.2.1</commons-fileupload.version>
-		<freemarker.version>2.3.19</freemarker.version>
-		<hamcrest.version>1.3.0RC2</hamcrest.version>
-		<javamail.version>1.4.1</javamail.version>
-	  <spymemcached.version>2.8.4</spymemcached.version>
-	  <aspectjrt.version>1.6.2</aspectjrt.version>
-	  <maven-site-plugin.version>3.2</maven-site-plugin.version>
-	  <svnkit.version>1.7.6</svnkit.version>
-	   <activiti.version>5.14</activiti.version>
-	   <mybatis.version>3.0.6</mybatis.version>
-	  <restlet.version>2.0.15</restlet.version>
-	  <codehaus.jackson.version>1.9.9</codehaus.jackson.version>
-	   
-	</properties>
-	<!-- 	
-
+		  <maven.compile.deprecation>off</maven.compile.deprecation>
+		  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		  <sitepath>D:/train/soft/s-Apache2.2/htdocs/${project.name}</sitepath>
+		  <jdk.version>1.6</jdk.version>
+		  <slf4j.version>1.7.2</slf4j.version>
+		  <logback.version>1.0.9</logback.version>
+      <janino.version>2.6.1</janino.version>
+      <scala.version>2.9.2</scala.version>
+      <groovy.version>2.0.0</groovy.version>
+ 		  <jansi.version>1.8</jansi.version>
+	    <cometd.version>2.7.0</cometd.version>
+	    <mysql.version>5.1.29</mysql.version>
+	    <hibernate3.version>3.6.1.Final</hibernate3.version>
+		  <spring>3.2.1.RELEASE</spring>
+		  <struts2.version>2.3.16</struts2.version><!--2.3.7-->
+		  <json.version>2.2.1</json.version>
+		  <junit.version>4.9</junit.version>
+		  <h2.version>1.3.167</h2.version>
+		  <jetty.version>9.1.2.v20140210</jetty.version><!--    8.0.0.M0  8.1.9.v20130131 --><!--7.6.13.v20130916 8.0.0.M0  8.1.9.v20130131 -->
+		  <servlet-api.version>3.1.0</servlet-api.version>
+		  <commons-logging.version>1.1.1</commons-logging.version>
+		  <commons-fileupload.version>1.2.1</commons-fileupload.version>
+		  <freemarker.version>2.3.19</freemarker.version>
+		  <hamcrest.version>1.3.0RC2</hamcrest.version>
+		  <javamail.version>1.4.1</javamail.version>
+	    <spymemcached.version>2.8.4</spymemcached.version>
+	    <aspectjrt.version>1.6.2</aspectjrt.version>
+	    <maven-site-plugin.version>3.2</maven-site-plugin.version>
+	    <svnkit.version>1.7.6</svnkit.version>
+	    <activiti.version>5.14</activiti.version>
+	    <mybatis.version>3.0.6</mybatis.version>
+	    <restlet.version>2.0.15</restlet.version>
+	    <codehaus.jackson.version>1.9.9</codehaus.jackson.version>
+</properties>
+	<!-- 
   <repositories>
     <repository>
       <id>maven-restlet</id>
@@ -64,11 +50,9 @@
       <url>http://maven.restlet.org</url>
     </repository>
   </repositories>
- -->
-
-	<dependencies>
-		
-         <dependency>
+	 -->
+	  <dependencies>
+		     <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.version}</version>
@@ -78,18 +62,14 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>${servlet-api.version}</version>
-      
         </dependency>
-
-
-
 
         <dependency>
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
             <version>1</version>
         </dependency>
-       <dependency>
+        <dependency>
             <groupId>org.cometd.java</groupId>
             <artifactId>bayeux-api</artifactId>
             <version>${cometd.version}</version>
@@ -110,47 +90,23 @@
 								<artifactId>jetty-util</artifactId>
 							</exclusion>
 						</exclusions>
-            
         </dependency>
-
-
-
-
-         <dependency>
+        <dependency>
             <groupId>org.cometd.java</groupId>
             <artifactId>cometd-java-client</artifactId>
             <version>${cometd.version}</version>
         </dependency>
-         <dependency>
+        <dependency>
             <groupId>org.cometd.java</groupId>
             <artifactId>cometd-java-oort</artifactId>
             <version>${cometd.version}</version>
         </dependency>
-       
-         <dependency>
+        <dependency>
             <groupId>org.cometd.java</groupId>
             <artifactId>cometd-java-annotations</artifactId>
             <version>${cometd.version}</version>
         </dependency>       
-		 		<dependency>
-					<groupId>org.jrobin</groupId>
-					<artifactId>jrobin</artifactId>
-					<version>1.5.9</version>
-				</dependency>      
- 	
- 		 		<dependency>
-					<groupId>org.jrobin</groupId>
-					<artifactId>jrobin</artifactId>
-					<version>1.5.9</version>
-				</dependency>       
-				 	<dependency>
-					<groupId>net.bull.javamelody</groupId>
-					<artifactId>javamelody-core</artifactId>
-					<version>1.48.0</version>
-				</dependency>
-				             
-        
-        <dependency>
+		 	 <dependency>
             <groupId>org.cometd.java</groupId>
             <artifactId>cometd-websocket-jetty</artifactId>
             <version>${cometd.version}</version>
@@ -161,12 +117,26 @@
                 </exclusion>
             </exclusions>
         </dependency>	
+			 		
+	
+ 		 		<dependency>
+					<groupId>org.jrobin</groupId>
+					<artifactId>jrobin</artifactId>
+					<version>1.5.9</version>
+				</dependency>       
+				 	<dependency>
+					<groupId>net.bull.javamelody</groupId>
+					<artifactId>javamelody-core</artifactId>
+					<version>1.48.0</version>
+				</dependency>
 	
 		
 	  <dependency><groupId>org.activiti</groupId><artifactId>activiti-engine</artifactId><version>${activiti.version}</version></dependency>
 	  <dependency><groupId>org.activiti</groupId><artifactId>activiti-spring</artifactId><version>${activiti.version}</version></dependency>
 	  <dependency><groupId>org.activiti</groupId><artifactId>activiti-bpmn-model</artifactId><version>${activiti.version}</version></dependency>
-	  	  
+	  <dependency><groupId>org.activiti</groupId><artifactId>activiti-common-rest</artifactId><version>${activiti.version}</version></dependency>	  
+	  <dependency><groupId>org.activiti</groupId><artifactId>activiti-rest</artifactId><version>${activiti.version}</version></dependency>	  
+  	
   	<dependency>
 	    <groupId>mybatis</groupId>
 	    <artifactId>mybatis</artifactId>
@@ -188,84 +158,17 @@
 		    <artifactId>ehcache-web</artifactId>
 		    <version>2.0.4</version>
 		  </dependency>		
-	   <!--
-			<dependency>
-			<groupId>demo</groupId>
-			<artifactId>ea-core</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<exclusions>
-				<exclusion>
-					<groupId>activiti</groupId>
-					<artifactId>activiti-spring</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>activiti</groupId>
-					<artifactId>activiti-engine</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.springframework.security</groupId>
-					<artifactId>spring-security-core</artifactId>
-				</exclusion>	
-				<exclusion>
-					<groupId>org.springframework.security</groupId>
-					<artifactId>spring-security-web</artifactId>
-				</exclusion>	
-				
-				<exclusion>
-					<groupId>org.springframework.security</groupId>
-					<artifactId>spring-security-config</artifactId>
-				</exclusion>	
-				<exclusion>
-					<groupId>org.mybatis</groupId>
-					<artifactId>mybatis</artifactId>
-				</exclusion>														
-			</exclusions>				
-			
-		</dependency>			
-		
-		<dependency>
-			<groupId>demo</groupId>
-			<artifactId>base-common</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<exclusions>
-				<exclusion>
-					<groupId>activiti</groupId>
-					<artifactId>activiti-spring</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>activiti</groupId>
-					<artifactId>activiti-engine</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.springframework.security</groupId>
-					<artifactId>spring-security-core</artifactId>
-				</exclusion>	
-				<exclusion>
-					<groupId>org.springframework.security</groupId>
-					<artifactId>spring-security-web</artifactId>
-				</exclusion>	
-				
-				<exclusion>
-					<groupId>org.springframework.security</groupId>
-					<artifactId>spring-security-config</artifactId>
-				</exclusion>	
-				<exclusion>
-					<groupId>org.mybatis</groupId>
-					<artifactId>mybatis</artifactId>
-				</exclusion>														
-			</exclusions>			
-		</dependency>
-	  -->
-	  <dependency>
-	    <groupId>org.codehaus.jackson</groupId>
-	    <artifactId>jackson-core-asl</artifactId>
-	    <version>1.9.11</version>
-	  </dependency>	
-  		<dependency>
-	    <groupId>org.codehaus.jackson</groupId>
-	    <artifactId>jackson-mapper-asl</artifactId>
-	    <version>1.9.11</version>
-	  </dependency>		
+		  
+		  <dependency>
+		    <groupId>org.codehaus.jackson</groupId>
+		    <artifactId>jackson-core-asl</artifactId>
+		    <version>1.9.11</version>
+		  </dependency>	
+	  		<dependency>
+		    <groupId>org.codehaus.jackson</groupId>
+		    <artifactId>jackson-mapper-asl</artifactId>
+		    <version>1.9.11</version>
+		  </dependency>		
 	
 
   	<!-- 
@@ -288,56 +191,54 @@
 	 -->
 	
 	 		<dependency>
-			<groupId>com.google.code.simple-spring-memcached</groupId>
-			<artifactId>spymemcached</artifactId>
-			<version>${spymemcached.version}</version>
-		</dependency>
+			    <groupId>com.google.code.simple-spring-memcached</groupId>
+			    <artifactId>spymemcached</artifactId>
+			    <version>${spymemcached.version}</version>
+		  </dependency>
 	
 			<dependency>
-			<groupId>org.aspectj</groupId>
-			<artifactId>aspectjrt</artifactId>
-			<version>${aspectjrt.version}</version>
-		</dependency>	
+			    <groupId>org.aspectj</groupId>
+			    <artifactId>aspectjrt</artifactId>
+			    <version>${aspectjrt.version}</version>
+		  </dependency>	
 
 
 	
 	
 
 			<dependency>
-			<groupId>org.freemarker</groupId>
-			<artifactId>freemarker</artifactId>
-			<version>${freemarker.version}</version>
-		</dependency>
+			    <groupId>org.freemarker</groupId>
+			    <artifactId>freemarker</artifactId>
+			    <version>${freemarker.version}</version>
+		  </dependency>
 		
-		<dependency> 
-			<groupId>org.apache.struts</groupId> 
-			<artifactId>struts2-spring-plugin</artifactId> 
-			<version>${struts2.version}</version> 
-			<exclusions>
-				<exclusion>
-					<groupId>org.springframework</groupId>
-					<artifactId>spring-core</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.springframework</groupId>
-					<artifactId>spring-web</artifactId>
-				</exclusion>				
-								
-			</exclusions>			
-			
-		</dependency>	
-   	    <dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-beans</artifactId>
-			<version>${spring}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.springframework</groupId>
-					<artifactId>spring-core</artifactId>
-				</exclusion>
-			</exclusions>				
-		</dependency>
-   	    <dependency>
+		  <dependency> 
+					<groupId>org.apache.struts</groupId> 
+					<artifactId>struts2-spring-plugin</artifactId> 
+					<version>${struts2.version}</version> 
+					<exclusions>
+						  <exclusion>
+							    <groupId>org.springframework</groupId>
+							    <artifactId>spring-core</artifactId>
+						  </exclusion>
+						  <exclusion>
+							    <groupId>org.springframework</groupId>
+							    <artifactId>spring-web</artifactId>
+						  </exclusion>				
+					</exclusions>			
+		   </dependency>	
+   	   <dependency>
+						<groupId>org.springframework</groupId>
+						<artifactId>spring-beans</artifactId>
+						<version>${spring}</version>
+						<exclusions>
+							<exclusion>
+								<groupId>org.springframework</groupId>
+								<artifactId>spring-core</artifactId>
+							</exclusion>
+						</exclusions>				
+				</dependency>
+   	<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>${spring}</version>
@@ -523,14 +424,7 @@
 			<version>${jetty.version}</version>
 		</dependency>
 		
-		<!--8.1.14.v20131031  all (37)
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<scope>provided</scope>
-			<artifactId>jetty-websocket</artifactId>
-			<version>${jetty.version}</version>
-		</dependency>
--->
+	
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 		
@@ -559,7 +453,7 @@
 
 
 
-	<dependency>
+	 <dependency>
 			<groupId>org.eclipse.jetty</groupId>
 		
 			<artifactId>jetty-continuation</artifactId>
@@ -723,7 +617,7 @@
 		</dependency>
 
 
-<!--webserivce 
+<!--webserivce -->
     <dependency>
       <groupId>org.restlet.jee</groupId>
       <artifactId>org.restlet</artifactId>
@@ -734,6 +628,13 @@
       <artifactId>org.restlet.ext.servlet</artifactId>
       <version>${restlet.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.restlet.jee</groupId>
+      <artifactId>org.restlet.ext.fileupload</artifactId>
+			<version>${restlet.version}</version>
+    </dependency>    
+    
+
     <dependency>
       <groupId>org.restlet.jee</groupId>
       <artifactId>org.restlet.ext.jackson</artifactId>
@@ -759,7 +660,7 @@
       <artifactId>jackson-mapper-asl</artifactId>
       <version>${codehaus.jackson.version}</version>
     </dependency>
--->
+
   
  <dependency>
       <groupId>org.eclipse.jetty.websocket</groupId>
@@ -788,7 +689,6 @@
       <version>1.0</version>
       <scope>provided</scope>
     </dependency>
-
 	</dependencies>
 
 	<build>
@@ -834,8 +734,6 @@
 					</execution>
 				</executions>
 			</plugin>
-							
-			
 			
 			
 			<plugin>
@@ -843,26 +741,15 @@
 				<artifactId>jetty-maven-plugin</artifactId>
 				<version>${jetty.version}</version>
 				<configuration>
-				
 					<scanIntervalSeconds>10</scanIntervalSeconds>
 					<webAppSourceDirectory>${basedir}/src/main/webapp/</webAppSourceDirectory>
 					<webAppConfig>
 						<contextPath>/${artifactId}</contextPath>
 						<descriptor>${basedir}/src/main/webapp/WEB-INF/web.xml</descriptor>
 						<defaultsDescriptor>src/main/resources/webdefault.xml</defaultsDescriptor>
-
 					</webAppConfig>
 				</configuration>
-				<!-- <dependencies> <dependency> <groupId>log4j</groupId> <artifactId>log4j</artifactId> 
-					<version>1.2.16</version> </dependency> </dependencies> -->
 			</plugin>
-			
-
-   
-
-	
 		</plugins>
-
-
 	</build>
 </project>
