--- a/ea-template/src/main/resources/database-mysql.properties
+++ b/ea-template/src/main/resources/database-mysql.properties
@@ -7,7 +7,7 @@ ea.jdbc.driver=com.mysql.jdbc.Driver
 ea.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #org.hibernate.dialect.H2Dialect
 ea.jdbc.username=root
-ea.jdbc.password=123456
+ea.jdbc.password=19905018
 ea.jdbc.maxIdle=10
 ea.jdbc.maxActive=30
 ea.jdbc.maxWait=60000
