--- a/ea-parent/pom.xml
+++ b/ea-parent/pom.xml
@@ -135,7 +135,14 @@
 	  <dependency><groupId>org.activiti</groupId><artifactId>activiti-spring</artifactId><version>${activiti.version}</version></dependency>
 	  <dependency><groupId>org.activiti</groupId><artifactId>activiti-bpmn-model</artifactId><version>${activiti.version}</version></dependency>
 	  <dependency><groupId>org.activiti</groupId><artifactId>activiti-common-rest</artifactId><version>${activiti.version}</version></dependency>	  
-	  <dependency><groupId>org.activiti</groupId><artifactId>activiti-rest</artifactId><version>${activiti.version}</version></dependency>	  
+	  <dependency><groupId>org.activiti</groupId><artifactId>activiti-rest</artifactId><version>${activiti.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
+			</exclusions>				  
+	  </dependency>	  
   	  
 	  
 		<dependency>
@@ -318,6 +325,7 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
+
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
