--- a/ea-template/.classpath
+++ b/ea-template/.classpath
@@ -37,7 +37,7 @@
 	<classpathentry kind="var" path="M2_REPO/org/cometd/java/cometd-java-annotations/2.7.0/cometd-java-annotations-2.7.0.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/jrobin/jrobin/1.5.9/jrobin-1.5.9.jar"/>
 	<classpathentry kind="var" path="M2_REPO/net/bull/javamelody/javamelody-core/1.48.0/javamelody-core-1.48.0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/activiti/activiti-engine/5.14/activiti-engine-5.14.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/activiti/activiti-engine/5.14/activiti-engine-5.14.jar" sourcepath="/activiti-engine"/>
 	<classpathentry kind="var" path="M2_REPO/org/activiti/activiti-bpmn-converter/5.14/activiti-bpmn-converter-5.14.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/activiti/activiti-bpmn-model/5.14/activiti-bpmn-model-5.14.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/apache/commons/commons-lang3/3.1/commons-lang3-3.1.jar"/>
@@ -59,14 +59,14 @@
 	<classpathentry kind="var" path="M2_REPO/org/springframework/spring-orm/3.2.1.RELEASE/spring-orm-3.2.1.RELEASE.jar"/>
 	<classpathentry kind="var" path="M2_REPO/commons-dbcp/commons-dbcp/1.2.1/commons-dbcp-1.2.1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/commons-pool/commons-pool/1.2/commons-pool-1.2.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/activiti/activiti-common-rest/5.14/activiti-common-rest-5.14.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/activiti/activiti-common-rest/5.14/activiti-common-rest-5.14.jar" sourcepath="/Activiti_comm"/>
 	<classpathentry kind="var" path="M2_REPO/org/restlet/jee/org.restlet/2.0.15/org.restlet-2.0.15.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/restlet/jee/org.restlet.ext.servlet/2.0.15/org.restlet.ext.servlet-2.0.15.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/restlet/jee/org.restlet.ext.jackson/2.0.15/org.restlet.ext.jackson-2.0.15.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/codehaus/jackson/jackson-mapper-asl/1.9.9/jackson-mapper-asl-1.9.9.jar"/>
 	<classpathentry kind="var" path="M2_REPO/junit/junit/4.9/junit-4.9.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.1/hamcrest-core-1.1.jar" sourcepath="M2_REPO/org/hamcrest/hamcrest-core/1.1/hamcrest-core-1.1-sources.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/activiti/activiti-rest/5.14/activiti-rest-5.14.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/activiti/activiti-rest/5.14/activiti-rest-5.14.jar" sourcepath="/Activiti-src"/>
 	<classpathentry kind="var" path="M2_REPO/org/activiti/activiti-json-converter/5.14/activiti-json-converter-5.14.jar"/>
 	<classpathentry kind="var" path="M2_REPO/math/geom2d/javaGeom/0.11.1/javaGeom-0.11.1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/activiti/activiti-simple-workflow/5.14/activiti-simple-workflow-5.14.jar"/>
@@ -165,4 +165,3 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/ea-core"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
-
