--- a/ea-template/src/main/webapp/WEB-INF/web.xml
+++ b/ea-template/src/main/webapp/WEB-INF/web.xml
@@ -136,7 +136,36 @@
     <url-pattern>/service/*</url-pattern>  
   </servlet-mapping> 
   <!-- end -->
-     
+    <!-- SVN servlet start -->
+    <servlet>
+		<servlet-name>SVNServlet</servlet-name>
+		<servlet-class>com.app.common.svn.servlet.SVNServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>SVNServlet</servlet-name>
+		<url-pattern>/svn</url-pattern>
+	</servlet-mapping>
+    <servlet>
+		<servlet-name>DownloadServlet</servlet-name>
+		<servlet-class>com.app.common.svn.servlet.DownloadServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>DownloadServlet</servlet-name>
+		<url-pattern>/download</url-pattern>
+	</servlet-mapping>
+    <servlet>
+		<servlet-name>CommitServlet</servlet-name>
+		<servlet-class>com.app.common.svn.servlet.CommitServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>CommitServlet</servlet-name>
+		<url-pattern>/commit</url-pattern>
+	</servlet-mapping>
+	
+    <!-- end -->
      <!--一定要在后-->
 	 <welcome-file-list>
 	     <welcome-file>index.ftl</welcome-file>
