--- a/ea-template/pom.xml
+++ b/ea-template/pom.xml
@@ -18,13 +18,8 @@
 					 <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>8.1.14.v20131031</version>
+                <version>8.0.0.M2</version>
                 <configuration>
-  									<connectors>
-                        <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-                            <port>9090</port>
-                        </connector>
-                    </connectors>                    	
                     <scanIntervalSeconds>10</scanIntervalSeconds>
                     <webAppSourceDirectory>${basedir}src/main/webapp/</webAppSourceDirectory>
                     <webAppConfig>
@@ -34,7 +29,7 @@
                 </configuration>
             </plugin>
          </plugins>
-  </build>    
+  </build>            
             
 	<dependencies>
 			<dependency>
