--- a/ea-parent/pom.xml
+++ b/ea-parent/pom.xml
@@ -18,6 +18,8 @@
       <scala.version>2.9.2</scala.version>
       <groovy.version>2.0.0</groovy.version>
  		  <jansi.version>1.8</jansi.version>
+		   <poi.version>3.10-FINAL</poi.version>
+		 
 	    <cometd.version>2.7.0</cometd.version>
 	    <mysql.version>5.1.29</mysql.version>
 	    <hibernate3.version>3.6.1.Final</hibernate3.version>
@@ -57,7 +59,8 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.version}</version>
         </dependency>
-        
+     <dependency>    <groupId>org.apache.poi</groupId>    <artifactId>poi</artifactId>    <version>${poi.version}</version></dependency>
+   
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
