--- a/ea-template/pom.xml
+++ b/ea-template/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 	<groupId>ea</groupId>
 	<artifactId>ea-template</artifactId>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
 	 
 	 
