--- a/ea-parent/pom.xml
+++ b/ea-parent/pom.xml
@@ -54,6 +54,20 @@
   </repositories>
 	 -->
 	  <dependencies>
+				<dependency>
+				<groupId>com.google.zxing</groupId>
+				<artifactId>core</artifactId>
+				<version>3.0.1</version>
+				</dependency>
+
+				<dependency>    
+					<groupId>com.google.zxing</groupId>  
+				  <artifactId>javase</artifactId>    
+				  <version>3.0.1</version>
+				</dependency>	  	
+
+
+	  	
 		     <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
