--- a/ea-template/src/main/resources/database-mysql.properties
+++ b/ea-template/src/main/resources/database-mysql.properties
@@ -1,6 +1,5 @@
-
 #ea.jdbc.url=jdbc:h2:~/test
-ea.jdbc.url=jdbc:mysql://localhost:3306/apmtest
+ea.jdbc.url=jdbc:mysql://localhost:3306/wte
 #jdbc:h2:tcp://localhost/~/common
 ea.jdbc.driver=com.mysql.jdbc.Driver
 #org.h2.Driver
@@ -12,17 +11,13 @@ ea.jdbc.maxIdle=10
 ea.jdbc.maxActive=30
 ea.jdbc.maxWait=60000
 ea.hibernate.hbm2ddl=update
-ea.hibernate.show_sql=true
+#ea.hibernate.hbm2ddl=none
+ea.hibernate.show_sql=false
 ea.hibernate.jdbc.fetch_size=50
 ea.hibernate.cache.provider_class=org.hibernate.cache.EhCacheProvider
 ea.hibernate.cache.use_query_cache=true
 ea.hibernate.cache.use_second_level_cache=true
 
-#ea.hibernate.connection.autocommit=true
 
-
-#alter  table manager_ea_user alter  column  allrole varchar(800);
+# alter  table manager_ea_user alter  column  allrole varchar(800);
 #alter  table manager_ea_user alter  column  allrolegroup varchar(800);
-#alter  table manager_ea_user alter  column  experience varchar(2500);
-#alter  table manager_ea_user alter  column  positiondescription varchar(2500);
-#alter  table manager_ea_user alter  column  kpidescription varchar(2500);
